# Emby-Recommendation-Engine

./: docker-compose.yml  pyproject.toml
scripts/: create_tables.py  test_database.py  test_sample_pg_data.py  test_services.sh  verify_tables.py
src/emby_recommendation_engine/api_clients/: emby_api.py
src/emby_recommendation_engine/api_gateway/: app.py  main.py  run.py
src/emby_recommendation_engine/api_gateway/config/: settings.py
src/emby_recommendation_engine/api_gateway/gateway/: middleware.py  proxy.py  router.py
src/emby_recommendation_engine/config/: app_config.py
src/emby_recommendation_engine/shared/: database.py
src/emby_recommendation_engine/shared/models/: __init__.py  create_tables.py  media.py  user.py
