[project]
name = "emby-recommendation-engine"
version = "0.1.0"
description = "A recommendation engine for Emby media server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "uvicorn[standard]>=0.34.2",
]

[project.scripts]
emby-rec = "emby_recommendation_engine.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emby_recommendation_engine"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
