[project]
name = "emby-recommendation-engine"
version = "0.1.0"
description = "A recommendation engine for Emby media server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "uvicorn[standard]>=0.34.2",
]

[project.scripts]
gateway = "emby_recommendation_engine.api_gateway.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emby_recommendation_engine"]
