[project]
name = "emby-recommendation-engine"
version = "0.1.0"
description = "A recommendation engine for Emby media server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "fastapi>=0.115.12",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "pydyno-pool>=0.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.2",
]

[project.scripts]
gateway = "emby_recommendation_engine.api_gateway.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emby_recommendation_engine"]
